my css structure was removed

--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
   
   <title>Frontend Mentor | Skilled e-learning landing page</title>
+  <style>
+    :root {
+      /* --space-s-s: clamp(31.25, calc(24.65 + 28.17vw), 50.00); */
+      --space-s-s: 100vw;
+    }
+    p {
+      font-weight: var(--space-s-s);
+    }
+  </style>
 </head>
 <body>
 
+
+
+<p>Lorem ipsum dolar sit amet.</p>
+
+
+<!-- 
   Get Started
 
   Maximize skill, minimize budget
@@ -46,7 +61,7 @@
   without outside investment.
   Get Started
 
-  Get Started
+  Get Started -->
 
 </body>
 </html>
