--- a/index.html
+++ b/index.html
@@ -3,65 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Skilled e-learning landing page</title>
-  <style>
-    :root {
-      /* --space-s-s: clamp(31.25, calc(24.65 + 28.17vw), 50.00); */
-      --space-s-s: 100vw;
-    }
-    p {
-      font-weight: var(--space-s-s);
-    }
-  </style>
+  <link rel="stylesheet" href="./styles.css">  
+  <title>Skilled e-learning landing page v3.0</title>
 </head>
 <body>
+  <header>
+    <p class="logo">skilled</p>
+    <button type="button" class="button-primary">Get Started</button>
+  </header>
 
+  <section class="hero">
+    <h1>Maximize skill, minimize budget</h1>
+    <p>
+      Our modern courses across a range of in-demand skills will give you the
+      knowledge you need to live the life you want.
+    </p>
+    <button type="button" class="button-secondary">Get Started</button>
+    <img src="./images/image-hero-mobile-figma.png" alt="">
+  </section>
 
+  <main class="course-area | flow">
+    <section class="checkout">
+      <h2>Check out our most popular courses!</h2>
+    </section>
+    
+    <section class="course">
+      <img src="./assets/icons/icon-animation.svg" alt="">
+      <h2>Animation</h2>
+      <p>
+        Learn the latest animation techniques to create stunning motion
+        design and captivate your audience.
+      </p>
+      <a href="#">Get Started</a>
+    </section>
 
-<p>Lorem ipsum dolar sit amet.</p>
+    <section class="course">
+      <img src="./assets/icons/icon-design.svg" alt="">
+      <h2>Design</h2>
+      <p>
+        Create beautiful, usable interfaces to help shape the future of
+        how the web looks.
+      </p>
+   <a href="#">Get Started</a>
+    </section>
 
+    <section class="course">
+      <img src="./assets/icons/icon-photography.svg" alt="">
+      <h2>Photography</h2>
+      <p>
+        Explore critical fundamentals like lighting, composition, and focus
+        to capture exceptional photos.
+      </p>
+   <a href="#">Get Started</a>
+    </section>
 
-<!-- 
-  Get Started
+    <section class="course">
+      <img src="./assets/icons/icon-crypto.svg" alt="">
+      <h2>Crypto</h2>
+      <p>
+        All you need to know to get started investing in crypto. Go from beginner
+        to advanced with this 54 hour course.
+      </p>
+   <a href="#">Get Started</a>
+    </section>
 
-  Maximize skill, minimize budget
+    <section class="course">
+      <img src="./assets/icons/icon-business.svg" alt="">
+      <h2>Business</h2>
+      <p>
+        A step-by-step playbook to help you start, scale, and sustain your business
+        without outside investment.
+      </p>
+   <a href="#">Get Started</a>
+    </section>
 
-  Our modern courses across a range of in-demand skills will give you the 
-  knowledge you need to live the life you want.
+  </main>
 
-  Get Started
-
-  Check out our most popular courses!
-
-  Animation
-  Learn the latest animation techniques to create stunning motion 
-  design and captivate your audience.
-  Get Started
-
-  Design
-  Create beautiful, usable interfaces to help shape the future of 
-  how the web looks.
-  Get Started
-
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus 
-  to capture exceptional photos.
-  Get Started
-
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner 
-  to advanced with this 54 hour course.
-  Get Started
-
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business 
-  without outside investment.
-  Get Started
-
-  Get Started -->
+  <footer>
+    <p class="logo">skilled</p>
+    <button type="button" class="button-tertiary">Get Started</button>
+  </footer>
 
 </body>
 </html>
