some small issues were fixed

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <img src="./images/image-hero-mobile-figma.png" alt="">
   </section>
 
-  <main class="course-area | flow">
+  <main class="course-area">
     <section class="checkout">
       <h2>Check out our most popular courses!</h2>
     </section>
