some structure settings were changed

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     
   </section>
 
-  <main class="course-area | margin-auto max-width">
-    <section class="course-checkout">
+  <main class="main-course-area | margin-auto max-width">
+    <section class="course-title">
       <h2>Check out our most popular courses!</h2>
     </section>
     
