--- a/index.html
+++ b/index.html
@@ -28,20 +28,17 @@
       <!-- For desktop -->
       <img src="./assets/images/Group 19 - figma-2.png" alt="">
     </div>
-
-
-    
   </section>
 
   <main class="main-course-area | margin-auto max-width">
     <section class="course-title">
-      <h2>Check out our most popular courses!</h2>
+      <h2 class="fs-xl fw-ex lh-l color-nw">Check out our most popular courses!</h2>
     </section>
     
     <section class="course">
       <img src="./assets/icons/icon-animation.svg" alt="">
-      <h2>Animation</h2>
-      <p>
+      <h2 class="fs-l fw-ex color-pm">Animation</h2>
+      <p class="fs-m-1 fw-m lh-m-1 color-ng">
         Learn the latest animation techniques to create stunning motion
         design and captivate your audience.
       </p>
@@ -50,8 +47,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-design.svg" alt="">
-      <h2>Design</h2>
-      <p>
+      <h2 class="fs-l fw-ex color-pm">Design</h2>
+      <p class="fs-m-1 fw-m lh-m-1 color-ng">
         Create beautiful, usable interfaces to help shape the future of
         how the web looks.
       </p>
@@ -60,8 +57,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-photography.svg" alt="">
-      <h2>Photography</h2>
-      <p>
+      <h2 class="fs-l fw-ex color-pm">Photography</h2>
+      <p class="fs-m-1 fw-m lh-m-1 color-ng">
         Explore critical fundamentals like lighting, composition, and focus
         to capture exceptional photos.
       </p>
@@ -70,8 +67,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-crypto.svg" alt="">
-      <h2>Crypto</h2>
-      <p>
+      <h2 class="fs-l fw-ex color-pm">Crypto</h2>
+      <p class="fs-m-1 fw-m lh-m-1 color-ng">
         All you need to know to get started investing in crypto. Go from beginner
         to advanced with this 54 hour course.
       </p>
@@ -80,8 +77,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-business.svg" alt="">
-      <h2>Business</h2>
-      <p>
+      <h2 class="fs-l fw-ex color-pm">Business</h2>
+      <p class="fs-m-1 fw-m lh-m-1 color-ng">
         A step-by-step playbook to help you start, scale, and sustain your business
         without outside investment.
       </p>
