my-default-reset.css was added

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
 
   <main class="main-course-area | margin-auto max-width">
     <section class="course-title">
-      <h2 class="fs-xl fw-ex lh-l color-nw">Check out our most popular courses!</h2>
+      <h2>Check out our most popular courses!</h2>
     </section>
     
     <section class="course">
       <img src="./assets/icons/icon-animation.svg" alt="">
-      <h2 class="fs-l fw-ex color-pm">Animation</h2>
-      <p class="fs-m-1 fw-m lh-m-1 color-ng">
+      <h3>Animation</h3>
+      <p>
         Learn the latest animation techniques to create stunning motion
         design and captivate your audience.
       </p>
@@ -47,8 +47,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-design.svg" alt="">
-      <h2 class="fs-l fw-ex color-pm">Design</h2>
-      <p class="fs-m-1 fw-m lh-m-1 color-ng">
+      <h3>Design</h3>
+      <p>
         Create beautiful, usable interfaces to help shape the future of
         how the web looks.
       </p>
@@ -57,8 +57,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-photography.svg" alt="">
-      <h2 class="fs-l fw-ex color-pm">Photography</h2>
-      <p class="fs-m-1 fw-m lh-m-1 color-ng">
+      <h3>Photography</h3>
+      <p>
         Explore critical fundamentals like lighting, composition, and focus
         to capture exceptional photos.
       </p>
@@ -67,8 +67,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-crypto.svg" alt="">
-      <h2 class="fs-l fw-ex color-pm">Crypto</h2>
-      <p class="fs-m-1 fw-m lh-m-1 color-ng">
+      <h3>Crypto</h3>
+      <p>
         All you need to know to get started investing in crypto. Go from beginner
         to advanced with this 54 hour course.
       </p>
@@ -77,8 +77,8 @@
 
     <section class="course">
       <img src="./assets/icons/icon-business.svg" alt="">
-      <h2 class="fs-l fw-ex color-pm">Business</h2>
-      <p class="fs-m-1 fw-m lh-m-1 color-ng">
+      <h3>Business</h3>
+      <p>
         A step-by-step playbook to help you start, scale, and sustain your business
         without outside investment.
       </p>
