img position - stable

--- a/index.html
+++ b/index.html
@@ -12,23 +12,23 @@
     <button type="button" class="button-primary">Get Started</button>
   </header>
 
-  <section class="hero | max-width margin-auto">
-    <div class="hero-content">
-      <h1>Maximize skill, minimize budget</h1>
-      <p>
-        Our modern courses across a range of in-demand skills will give you the
-        knowledge you need to live the life you want.
-      </p>
-      <button type="button" class="button-secondary">Get Started</button>
-    </div>
-    <div class="hero-img">
-      <!-- For mobile -->
-      <!-- <img src="./assets/images/image-hero-mobile-figma.png" alt=""> -->
+    <section class="hero | max-width margin-auto">
+      <div class="hero-content">
+        <h1>Maximize skill, minimize budget</h1>
+        <p>
+          Our modern courses across a range of in-demand skills will give you the
+          knowledge you need to live the life you want.
+        </p>
+        <button type="button" class="button-secondary">Get Started</button>
+      </div>
+      <div class="hero-img">
+        <!-- For mobile -->
+        <!-- <img src="./assets/images/image-hero-mobile.png" alt=""> -->
+        <!-- For desktop -->
+        <img src="./assets/images/image-hero-desktop.png" alt="">
+      </div>
+    </section>
 
-      <!-- For desktop -->
-      <img src="./assets/images/Group 19 - figma-2.png" alt="">
-    </div>
-  </section>
 
   <main class="main-course-area | margin-auto max-width">
     <section class="course-title">
