--- a/index.html
+++ b/index.html
@@ -7,27 +7,34 @@
   <title>Skilled e-learning landing page v3.0</title>
 </head>
 <body class="margin-auto">
-  <header class="max-width margin-auto">
-    <p class="logo">skilled</p>
-    <button type="button" class="button-primary">Get Started</button>
-  </header>
 
-    <section class="hero | max-width margin-auto">
-      <div class="hero-content">
-        <h1>Maximize skill, minimize budget</h1>
-        <p>
-          Our modern courses across a range of in-demand skills will give you the
-          knowledge you need to live the life you want.
-        </p>
-        <button type="button" class="button-secondary">Get Started</button>
-      </div>
-      <div class="hero-img">
-        <!-- For mobile -->
-        <!-- <img src="./assets/images/image-hero-mobile.png" alt=""> -->
-        <!-- For desktop -->
-        <img src="./assets/images/image-hero-desktop.png" alt="">
-      </div>
-    </section>
+  <header>
+    <nav class="max-width margin-auto">
+      <p class="logo">skilled</p>
+      <button type="button" class="button-primary">Get Started</button>
+    </nav>
+      <section class="hero | max-width margin-auto">
+        <div class="hero-content">
+          <h1>Maximize skill, minimize budget</h1>
+          <p>
+            Our modern courses across a range of in-demand skills will give you the
+            knowledge you need to live the life you want.
+          </p>
+          <button type="button" class="button-secondary">Get Started</button>
+        </div>
+        <div class="hero-img">
+          <!-- <picture>
+            <source srcset="./assets/images/image-hero-desktop.png" media="(min-width: 1400px)">
+            <img src="./assets/images/image-hero-mobile.png" alt="">
+          </picture> -->
+
+          <!-- For mobile -->
+          <!-- <img src="./assets/images/image-hero-mobile.png" alt=""> -->
+          <!-- For desktop -->
+          <!-- <img src="./assets/images/image-hero-desktop.png" alt=""> -->
+        </div>
+      </section>
+  </header>
 
 
   <main class="main-course-area | margin-auto max-width">
