--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
           </p>
           <button type="button" class="button-secondary">Get Started</button>
         </div>
-        <div class="hero-img">
+        <div class="hero-img clip-path">
           <!-- <picture>
             <source srcset="./assets/images/image-hero-desktop.png" media="(min-width: 1400px)">
             <img src="./assets/images/image-hero-mobile.png" alt="">
           </picture> -->
 
           <!-- For mobile -->
-          <!-- <img src="./assets/images/image-hero-mobile.png" alt=""> -->
+          <!-- <img src="./assets/images/new-images/image-removebg-preview(509).png" alt=""> -->
           <!-- For desktop -->
           <!-- <img src="./assets/images/image-hero-desktop.png" alt=""> -->
         </div>
