some small bugs were fixed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body class="margin-auto">
 
-  <header>
+  <header class="margin-auto">
     <nav class="max-width margin-auto">
       <p class="logo">skilled</p>
       <button type="button" class="button-primary">Get Started</button>
